--- a/scss/mediaquery/_small.scss
+++ b/scss/mediaquery/_small.scss
@@ -41,6 +41,7 @@
   .rules {
     position: relative;
     margin-top: 250px;
+    margin-bottom: 80px;
   }
 
   .rules_modal {
@@ -54,7 +55,7 @@
 
   .option_result_middle {
     gap: 50px;
-    margin-bottom: 30px;
+    margin-bottom: 90px;
     width: 100%;
   }
 
@@ -67,9 +68,13 @@
     font-size: 14px;
   }
 
+  .option_result_middle_content_title {
+    font-size: 43px;
+  }
+
   .option_result_middle_content {
     position: absolute;
-    top: 61%;
+    top: 65%;
     left: 37%;
     transform: translate(-50px, -50px) !important;
   }
